--- a/index.html
+++ b/index.html
@@ -87,7 +87,80 @@
             <div class="section-three-container">
                 <h2 class="section-three-title">Choose your dream yacht and sail away into the sunset</h2>
                 <div class="container-of-cards">
-                    
+                    <ul class="menu-of-yacht">
+                        <li class="item-of-yacht">
+                            <img srcset="./images/img2l@2x.jpg 2x" src="./images/img2l.jpg" alt="ARROW" width="345" height="268px" class="img-yacht">
+                            <div class="menu-title">
+                                <h3 class="name-of-yacht">ARROW</h3>
+                                <h3 class="luxury-yachts">LUXURY YAHTS</h3>
+                            </div>
+                            <div class="icon-of-vector" href=""><svg><use href="./images/icons.svg#icon-Vector"></use></svg></div>
+                            <div class="menu-of-details">
+                            <ul class="menu-of-names">
+                                <li class="item-of-names">LENGTH</li>
+                                <li class="item-of-names">BUILDER</li>
+                                <li class="item-of-names">BUILT</li>
+                                <li class="item-of-names">GUESTS</li>
+                                <li class="item-of-names">PRICE</li>
+                            </ul>
+                            <ul class="menu-of-settings">
+                                <li class="item-of-settings">48m(155ft) </li>
+                                <li class="item-of-settings">Admiral</li>
+                                <li class="item-of-settings">2021</li>
+                                <li class="item-of-settings">11 in 5 cabins</li>
+                                <li class="item-of-settings">€33,500,000</li>
+                            </ul>
+                            </div>
+                        </li>
+                        <li class="item-of-yacht">
+                            <img srcset="./images/img3l@2x.jpg 2x" src="./images/img3l.jpg" alt="ARROW" width="345" height="268px" class="img-yacht">
+                            <div class="menu-title">
+                                <h3 class="name-of-yacht">BENETTI OASIS 40M BO122</h3>
+                                <h3 class="luxury-yachts">LUXURY YAHTS</h3>
+                            </div>
+                            <div class="icon-of-vector" href=""><svg><use href="./images/icons.svg#icon-Vector"></use></svg></div>
+                            <div class="menu-of-details">
+                            <ul class="menu-of-names">
+                                <li class="item-of-names">LENGTH</li>
+                                <li class="item-of-names">BUILDER</li>
+                                <li class="item-of-names">BUILT</li>
+                                <li class="item-of-names">GUESTS</li>
+                                <li class="item-of-names">PRICE</li>
+                            </ul>
+                            <ul class="menu-of-settings">
+                                <li class="item-of-settings">41m (133ft)</li>
+                                <li class="item-of-settings">Benetti</li>
+                                <li class="item-of-settings">2025</li>
+                                <li class="item-of-settings">10 in 5 cabins</li>
+                                <li class="item-of-settings">€23,210,000</li>
+                            </ul>
+                            </div>
+                        </li>
+                        <li class="item-of-yacht">
+                            <img srcset="./images/img4l@2x.jpg 2x" src="./images/img4l.jpg" alt="ARROW" width="345" height="268px" class="img-yacht">
+                            <div class="menu-title">
+                                <h3 class="name-of-yacht">BELLE ANNA</h3>
+                                <h3 class="luxury-yachts">LUXURY YAHTS</h3>
+                            </div>
+                            <div class="icon-of-vector" href=""><svg><use href="./images/icons.svg#icon-Vector"></use></svg></div>
+                            <div class="menu-of-details">
+                            <ul class="menu-of-names">
+                                <li class="item-of-names">LENGTH</li>
+                                <li class="item-of-names">BUILDER</li>
+                                <li class="item-of-names">BUILT</li>
+                                <li class="item-of-names">GUESTS</li>
+                                <li class="item-of-names">PRICE</li>
+                            </ul>
+                            <ul class="menu-of-settings">
+                                <li class="item-of-settings">50m(155ft)</li>
+                                <li class="item-of-settings">ISA</li>
+                                <li class="item-of-settings">2012</li>
+                                <li class="item-of-settings">12 in 6 cabins</li>
+                                <li class="item-of-settings">€21,000,000</li>
+                            </ul>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </section>
